# sentiric-stream-gateway-service

./: .context.md  .gitignore  Cargo.toml  Dockerfile  LOGIC.md  Makefile  README.md  SPECIFICATION.md  TASKS.md  docker-compose.integration.yml  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  docker-publish.yml  pipeline.yml
src/: app.rs  clients.rs  config.rs  handlers.rs  main.rs
src/pubsub/: consumer.rs  ghost_publisher.rs  mod.rs
src/server/: http.rs  mod.rs  ws_handler.rs
static/: index.html
static/css/: style.css
static/js/: app.js  audio-core.js
tests/: call_simulator.rs  headless_e2e.rs
