[package]
name = "sentiric-stream-gateway-service"
version = "1.1.8"
edition = "2021"
authors = ["Sentiric Architecture Team"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros", "tokio"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
hostname = "0.3"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.36" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2.3" 
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
prost = "0.12"
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
# v1.20.3 ve v0.1.8'e güncellendi
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.20.3" }
sentiric-ai-pipeline-sdk = { git = "https://github.com/sentiric/sentiric-ai-pipeline-sdk.git", tag = "v0.1.8" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true